# stellar-hacks-agents

./: .gitignore  HACKATHON_README.md  README.md  package.json  pnpm-lock.yaml  todo.md  vitest.config.ts
client/: CLIENT_README.md  index.html
client/src/: App.tsx  index.css
client/src/components/: AccountDashboard.tsx  ActivityFeedSection.tsx  AgentChat.tsx  AgentTaskPanel.tsx  ContractMarketPanel.tsx  LayoutSection.tsx  Navbar.tsx  SearchDemoPanel.tsx  SectionDivider.tsx  WalletConnect.tsx
contracts/: AUDIT.md  Cargo.toml  README.md
contracts/deploy/: testnet-contract-id.env.example
contracts/scripts/: deploy-testnet.example.sh  deploy-testnet.sh
contracts/stellar-agent-market/: Cargo.toml
contracts/stellar-agent-market/src/: lib.rs  test.rs
docs/: REPUTATION.md  wallet-agent-audit-checklist.md
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: soroban-diagnostics.ts
server/: routers.ts
server/_core/: agentMarketEnv.ts  env.ts  index.ts  llm.ts  mcpSearch.ts
server/routers/: agent.ts  agentMarketContract.ts  payment.ts  stellar.ts
server/soroban/: agentMarketClient.ts
shared/: agentMarketContract.test.ts  agentMarketContract.ts  agentStateMachine.test.ts  agentStateMachine.ts  appConnectionModel.ts  blockchainInterpret.ts  blockchainUiModel.test.ts  blockchainUiModel.ts  const.ts  paymentTypes.ts  reputationCompute.test.ts  reputationCompute.ts  reputationModel.ts  reputationSamples.ts  searchContract.ts  stellarAccountFormat.test.ts  stellarAccountFormat.ts  stellarHorizon.ts  stellarSoroban.ts  types.ts
(+74 files in other folders)
